2009-08-14  David Sedeño <david@alderia.com>
  
  * data/Makefile.am: Fix --disable-schemas-install. Pach from Vincent Untz
  (Fixes #590850)
  * configure.ac, epiphany-extension/ephy-gwget-extension.c: 
  Support for Epiphany 2.27/2.28. Patch from Vincent Untz (Fixes #585401)

2009-07-04  David Sedeño <david@alderia.com>

	* src/gwget_data.c: Remove g_warning when getting the size of a no (new) file.
	* src/new_window.c: Set parent window to the filechooser in new dialog. 
	* src/main_window_cb.c: Set parent window to about dialog.
	* data/gwget.ui, src/main_window.c: Set the rows and columns reorderable.
	* data/gwget.ui: Set remove download callback. Set icon for md5_sum window.
	* src/main_window.c: 
		- Fix drag'n'drop freeze. Thansk to Artur Rona <ari-tczew@tlen.pl> 
		for the bugreport.
		- Don't add download from gconf if url is null.

2009-06-30  David Sedeño <david@alderia.com>

  * data/gwget.ui: Set button size to menu. Fixes #527818

2009-06-27  David Sedeño <david@alderia.com>

  * gwget.doap: new file
  * data/gwget.ui: Set resume icon in popup menu
  * po/POTFILES.in: Remove .glade file and add .ui files

2009-06-20  David Sedeño <david@alderia.com>

  * src/new_window.c: Use gtk_combo_box_get_active_text instead 
    of gtk_entry_get_text
  * data/gwget.ui: Redone the menuitems. Remove unused dialog3. 
    Redone the popup menu.
  * src/main_window.c: Load correct file
  * data/preferences.ui: Update with glade-3
  
2009-06-20  David Sedeño <david@alderia.com>

  * configure.ac, data/Makefile.am, data/gwget.ui, data/preferences.ui,
    src/gwget_data.c, src/main_window.c, src/main_window.h, src/main_window_cb.c,
    src/new_window.c, src/systray.c, src/utils.c
  Mass changes to migrate to gtkbuilder. Thanks to Artur Roma <ari-tczew@tlen.pl>

2009-06-18  David Sedeño <david@alderia.com>

  * configure.ac, NEWS: Version 1.0.2 

  * src/main.c, src/gnome-application.c: Remove old dbus code. 

  * src/main_window_cb.c (on_md5ok_button_clicked): 